--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,13 @@
 			<scope>provided</scope>
 		</dependency>		
 		 <!-- MySQL database driver -->
+		 <!-- Apache Database Connection Pool -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
