--- a/pom.xml
+++ b/pom.xml
@@ -134,10 +134,11 @@
 		</dependency>	 
 		<!-- Hibernate framework -->
 		<dependency>
-		    <groupId>org.hibernate</groupId>
-		    <artifactId>hibernate-core</artifactId>
-		    <version>5.0.0.Beta1</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.8.Final</version>
 		</dependency>
+		
 		<!-- Hibernate library dependecy start -->
 		<dependency>
 			<groupId>dom4j</groupId>
