--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 
 	<properties>
 		<java.version>1.7</java.version>
-		<spring.version>3.1.0.RELEASE</spring.version>
-		<cglib.version>2.2.2</cglib.version>
+		<spring.version>4.1.6.RELEASE</spring.version>
+		<cglib.version>3.1</cglib.version>
 	</properties>
 
 	<dependencies>
@@ -54,6 +54,11 @@
 			<version>1.4.1.RELEASE</version>
 		</dependency>
 				
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>5.0.3</version>
+		</dependency>
 
 		<!-- CGLib for @Configuration -->
 		<dependency>
@@ -62,8 +67,7 @@
 			<version>${cglib.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-
-
+		
 		<!-- Servlet Spec -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
